fixing some spacing

--- a/styles/index.css
+++ b/styles/index.css
@@ -56,7 +56,7 @@ body {
 }
 #doll-holder{
     display: flex;
-    width:  35rem;
+    width:  40rem;
     /* height: auto; */
     justify-content: center;
     /* align-items: center; */
@@ -118,6 +118,7 @@ body {
     justify-content: space-between;
     gap: 2rem;
     padding: 1rem;
+
 }
 
 /* Every box (Temp, Sky, City) */
